adding event listeners

--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
           <label for="pool-length">Pool Length</label>
           <select id="pool-length">
             <optgroup>
-              <option value="2.0">2.0m</option>
-              <option value="2.2">2.2m</option>
-              <option value="8.2" selected>8.2m</option>
+              <option value="6.0">6.0m</option>
+              <option value="7.0">7.0m</option>
+              <option value="8.0" selected>8.0m</option>
             </optgroup>
           </select>
         </div>
         <div class="select-option">
-          <label for="pool_width">Pool Width</label>
-          <select id="pool_width">
+          <label for="pool-width">Pool Width</label>
+          <select id="pool-width">
             <optgroup>
-              <option value="2.0">1.7m</option>
-              <option value="2.2">2.2m</option>
+              <option value="3.0">3.0m</option>
+              <option value="4.0">4.0m</option>
+              <option value="5.0">5.0m</option>
               <option value="6.0" selected>6.0m</option>
-              <option value="8.2">8.2m</option>
             </optgroup>
           </select>
         </div>
         <div class="select-option">
-          <label for="need_roller">Need a Roller?</label>
-          <select id="need_roller">
+          <label for="need-roller">Need a Roller?</label>
+          <select id="need-roller">
             <optgroup>
               <option value="yes" selected>Yes</option>
               <option value="no">No</option>
@@ -40,8 +40,8 @@
           </select>
         </div>
         <div class="select-option">
-          <label for="side_step">Side Step?</label>
-          <select id="side_step">
+          <label for="side-step-visibility">Side Step?</label>
+          <select id="side-step-visibility">
             <optgroup>
               <option value="yes" selected>Yes</option>
               <option value="no">No</option>
@@ -70,8 +70,8 @@
           </select>
         </div>
         <div class="select-option">
-          <label for="step_length">Step Length</label>
-          <select id="step_length">
+          <label for="step-length">Step Length</label>
+          <select id="step-length">
             <optgroup>
               <option value="1.0">1.0m</option>
               <option value="1.1">1.1m</option>
@@ -102,6 +102,7 @@
       </form>
 
       <div class="pool-container">
+        <div id="side-step"></div>
         <div id="main-pool"></div>
       </div>
     </div>
