pool and step logic finished

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
           </select>
         </div>
         <div class="select-option">
-          <label for="side_step_orientation">Side Step Orientation</label>
-          <select id="side_step_orientation">
+          <label for="side-step-orientation">Side Step Orientation</label>
+          <select id="side-step-orientation">
             <optgroup>
               <option value="none">n/a</option>
               <option value="left" selected>Left Hand Side</option>
@@ -60,8 +60,8 @@
           </select>
         </div>
         <div class="select-option">
-          <label for="show_roller">Show Roller?</label>
-          <select id="show_roller">
+          <label for="show-roller">Show Roller?</label>
+          <select id="show-roller">
             <optgroup>
               <option value="left" selected>Left Side</option>
               <option value="right">Right Side</option>
@@ -73,9 +73,9 @@
           <label for="step-length">Step Length</label>
           <select id="step-length">
             <optgroup>
-              <option value="1.0">1.0m</option>
-              <option value="1.1">1.1m</option>
-              <option value="4.2" selected>4.2m</option>
+              <option value="2.0">2.0m</option>
+              <option value="3.0">3.0m</option>
+              <option value="4.0" selected>4.0m</option>
             </optgroup>
           </select>
         </div>
@@ -83,9 +83,9 @@
           <label for="step-width">Step Width</label>
           <select id="step-width">
             <optgroup>
-              <option value="0.4">0.4m</option>
-              <option value="0.5">0.5m</option>
-              <option value="1.0" selected>1.0m</option>
+              <option value="1.0">1.0m</option>
+              <option value="2.0">2.0m</option>
+              <option value="3.0" selected>3.0m</option>
             </optgroup>
           </select>
         </div>
