--- a/index.html
+++ b/index.html
@@ -100,10 +100,12 @@
           </select>
         </div>
       </form>
-
-      <div class="pool-container">
-        <div id="side-step"></div>
-        <div id="main-pool"></div>
+      <div id="diagram-container">
+        <div id="pool-container">
+          <div id="side-step"></div>
+          <div id="main-pool"></div>
+        </div>
+        <div id="roller"></div>
       </div>
     </div>
     <script src="app.js"></script>
