--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
   <body>
@@ -12,28 +15,23 @@
         <div class="select-option">
           <label for="pool-length">Pool Length</label>
           <select id="pool-length">
-            <optgroup>
-              <option value="6.0">6.0m</option>
-              <option value="7.0">7.0m</option>
-              <option value="8.0" selected>8.0m</option>
-            </optgroup>
+            <option value="6.0">6.0m</option>
+            <option value="7.0">7.0m</option>
+            <option value="8.0" selected>8.0m</option>
           </select>
         </div>
         <div class="select-option">
           <label for="pool-width">Pool Width</label>
           <select id="pool-width">
-            <optgroup>
               <option value="3.0">3.0m</option>
               <option value="4.0">4.0m</option>
               <option value="5.0">5.0m</option>
               <option value="6.0" selected>6.0m</option>
-            </optgroup>
           </select>
         </div>
         <div class="select-option">
           <label for="need-roller">Need a Roller?</label>
           <select id="need-roller">
-            <optgroup>
               <option value="yes" selected>Yes</option>
               <option value="no">No</option>
             </optgroup>
@@ -42,7 +40,6 @@
         <div class="select-option">
           <label for="side-step-visibility">Side Step?</label>
           <select id="side-step-visibility">
-            <optgroup>
               <option value="yes" selected>Yes</option>
               <option value="no">No</option>
             </optgroup>
@@ -51,7 +48,6 @@
         <div class="select-option">
           <label for="side-step-orientation">Side Step Orientation</label>
           <select id="side-step-orientation">
-            <optgroup>
               <option value="none">n/a</option>
               <option value="left" selected>Left Hand Side</option>
               <option value="right">Right Hand Side</option>
@@ -62,7 +58,6 @@
         <div class="select-option">
           <label for="show-roller">Show Roller?</label>
           <select id="show-roller">
-            <optgroup>
               <option value="left" selected>Left Side</option>
               <option value="right">Right Side</option>
               <option value="centre">Hide Roller</option>
@@ -72,7 +67,6 @@
         <div class="select-option">
           <label for="step-length">Step Length</label>
           <select id="step-length">
-            <optgroup>
               <option value="2.0">2.0m</option>
               <option value="3.0">3.0m</option>
               <option value="4.0" selected>4.0m</option>
@@ -82,7 +76,6 @@
         <div class="select-option">
           <label for="step-width">Step Width</label>
           <select id="step-width">
-            <optgroup>
               <option value="1.0">1.0m</option>
               <option value="2.0">2.0m</option>
               <option value="3.0" selected>3.0m</option>
@@ -92,7 +85,6 @@
         <div class="select-option">
           <label for="step-offset">Offset</label>
           <select id="step-offset">
-            <optgroup>
               <option value="none" selected>n/a</option>
               <option value="1.0">1.0m</option>
               <option value="1.1">1.1m</option>
