roller functionality added

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <select id="side-step-orientation">
               <option value="none">n/a</option>
               <option value="left" selected>Left Hand Side</option>
-              <option value="right">Right Hand Side</option>
+              <option value="right" >Right Hand Side</option>
               <option value="centre">Centre</option>
             </optgroup>
           </select>
@@ -58,9 +58,9 @@
         <div class="select-option">
           <label for="show-roller">Show Roller?</label>
           <select id="show-roller">
-              <option value="left" selected>Left Side</option>
-              <option value="right">Right Side</option>
-              <option value="centre">Hide Roller</option>
+              <option value="left" >Left Side</option>
+              <option value="right" selected>Right Side</option>
+              <option value="hidden">Hide Roller</option>
             </optgroup>
           </select>
         </div>
