top dimension added

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
       </form>
       <div id="diagram-container">
         <div id="overall-container">
+          <div id="top-dimension"></div>
           <div id="left-dimension"></div>
           <div id="pool-container">
             <div id="extra-container">
