dimension styling finished

--- a/index.html
+++ b/index.html
@@ -86,24 +86,50 @@
       </form>
       <div id="diagram-container">
         <div id="overall-container">
-          <div id="top-dimension"></div>
+          <div id="top-dimension">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 53.5 45"
+              height="9.75"
+              class="arrow3"
+            >
+              <g id="Layer_2" data-name="Layer 2">
+                <g id="Layer_1-2" data-name="Layer 1">
+                  <polygon points="53.52 0 0 22.32 53.52 45.12 53.52 0" />
+                </g>
+              </g>
+            </svg>
+            <div class="lineHorizontal"></div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 53.5 45"
+              height="9.75"
+              class="arrow4"
+            >
+              <g id="Layer_2" data-name="Layer 2">
+                <g id="Layer_1-2" data-name="Layer 1">
+                  <polygon points="0 45.12 53.52 22.8 0 0 0 45.12" />
+                </g>
+              </g>
+            </svg>
+          </div>
           <div id="left-dimension">
             <svg
               xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 45.12 53.52"
+              viewBox="0 0 45 53.5"
               width="10"
               class="arrow1"
             >
               <polygon
                 points="45.12 53.52 22.8 0 0 53.52 45.12 53.52"
-                fill="#FF6400"
+                id="path1"
               />
             </svg>
-            <div id="line"></div>
+            <div class="lineVertical"></div>
 
             <svg
               xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 45.12 53.52"
+              viewBox="0 0 45 53.5"
               width="10"
               class="arrow2"
             >
@@ -115,7 +141,20 @@
             </svg>
           </div>
           <div id="pool-container">
-            <div id="side-dimension"></div>
+            <div id="side-dimension">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 45 53.5"
+                width="10"
+                class="arrow1"
+              >
+                <polygon
+                  points="45.12 53.52 22.8 0 0 53.52 45.12 53.52"
+                  id="path1"
+                />
+              </svg>
+              <div class="lineVertical"></div>
+            </div>
             <div id="border-container">
               <div id="extra-container">
                 <div id="side-step"></div>
@@ -149,13 +188,39 @@
               </defs>
             </svg>
           </div>
-          <div id="right-dimension"></div>
+          <div id="right-dimension">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 45 53.5"
+              width="10"
+              class="arrow1"
+            >
+              <polygon
+                points="45.12 53.52 22.8 0 0 53.52 45.12 53.52"
+                id="path1"
+              />
+            </svg>
+            <div class="lineVertical"></div>
+
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 45 53.5"
+              width="10"
+              class="arrow2"
+            >
+              <g id="Layer_2" data-name="Layer 2">
+                <g id="Layer_1-2" data-name="Layer 1">
+                  <polygon points="0 0 22.32 53.52 45.12 0 0 0" />
+                </g>
+              </g>
+            </svg>
+          </div>
           <div id="bottom-dimension">
             <svg
               xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 53.52 45.12"
+              viewBox="0 0 53.5 45"
               height="9.75"
-              class="arrow1"
+              class="arrow3"
             >
               <g id="Layer_2" data-name="Layer 2">
                 <g id="Layer_1-2" data-name="Layer 1">
@@ -163,13 +228,12 @@
                 </g>
               </g>
             </svg>
-            <div id="line"></div>
-
+            <div class="lineHorizontal"></div>
             <svg
               xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 53.52 45.12"
+              viewBox="0 0 53.5 45"
               height="9.75"
-              class="arrow2"
+              class="arrow4"
             >
               <g id="Layer_2" data-name="Layer 2">
                 <g id="Layer_1-2" data-name="Layer 1">
