--- a/index.html
+++ b/index.html
@@ -86,60 +86,6 @@
       </form>
       <div id="diagram-container">
         <div id="overall-container">
-          <div id="top-dimension">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 53.5 45"
-              height="9.75"
-              class="arrow3"
-            >
-              <g id="Layer_2" data-name="Layer 2">
-                <g id="Layer_1-2" data-name="Layer 1">
-                  <polygon points="53.52 0 0 22.32 53.52 45.12 53.52 0" />
-                </g>
-              </g>
-            </svg>
-            <div class="lineHorizontal"></div>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 53.5 45"
-              height="9.75"
-              class="arrow4"
-            >
-              <g id="Layer_2" data-name="Layer 2">
-                <g id="Layer_1-2" data-name="Layer 1">
-                  <polygon points="0 45.12 53.52 22.8 0 0 0 45.12" />
-                </g>
-              </g>
-            </svg>
-          </div>
-          <div id="left-dimension">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 45 53.5"
-              width="10"
-              class="arrow1"
-            >
-              <polygon
-                points="45.12 53.52 22.8 0 0 53.52 45.12 53.52"
-                id="path1"
-              />
-            </svg>
-            <div class="lineVertical"></div>
-
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 45 53.5"
-              width="10"
-              class="arrow2"
-            >
-              <g id="Layer_2" data-name="Layer 2">
-                <g id="Layer_1-2" data-name="Layer 1">
-                  <polygon points="0 0 22.32 53.52 45.12 0 0 0" />
-                </g>
-              </g>
-            </svg>
-          </div>
           <div id="pool-container">
             <div id="side-dimension">
               <svg
@@ -154,6 +100,7 @@
                 />
               </svg>
               <div class="lineVertical"></div>
+              <div class="text-box"><p>text</p></div>
             </div>
             <div id="border-container">
               <div id="extra-container">
@@ -188,6 +135,63 @@
               </defs>
             </svg>
           </div>
+          <div id="top-dimension">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 53.5 45"
+              height="9.75"
+              class="arrow3"
+            >
+              <g id="Layer_2" data-name="Layer 2">
+                <g id="Layer_1-2" data-name="Layer 1">
+                  <polygon points="53.52 0 0 22.32 53.52 45.12 53.52 0" />
+                </g>
+              </g>
+            </svg>
+            <div class="lineHorizontal"></div>
+            <div class="text-box"><p>text</p></div>
+            <div class="lineHorizontal"></div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 53.5 45"
+              height="9.75"
+              class="arrow4"
+            >
+              <g id="Layer_2" data-name="Layer 2">
+                <g id="Layer_1-2" data-name="Layer 1">
+                  <polygon points="0 45.12 53.52 22.8 0 0 0 45.12" />
+                </g>
+              </g>
+            </svg>
+          </div>
+          <div id="left-dimension">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 45 53.5"
+              width="10"
+              class="arrow1"
+            >
+              <polygon
+                points="45.12 53.52 22.8 0 0 53.52 45.12 53.52"
+                id="path1"
+              />
+            </svg>
+            <div class="lineVertical"></div>
+            <div class="text-box"><p>text</p></div>
+            <div class="lineVertical"></div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 45 53.5"
+              width="10"
+              class="arrow2"
+            >
+              <g id="Layer_2" data-name="Layer 2">
+                <g id="Layer_1-2" data-name="Layer 1">
+                  <polygon points="0 0 22.32 53.52 45.12 0 0 0" />
+                </g>
+              </g>
+            </svg>
+          </div>
           <div id="right-dimension">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -200,6 +204,9 @@
                 id="path1"
               />
             </svg>
+            <div class="lineVertical"></div>
+            <div class="text-box"><p>text</p></div>
+
             <div class="lineVertical"></div>
 
             <svg
@@ -228,6 +235,9 @@
                 </g>
               </g>
             </svg>
+            <div class="lineHorizontal"></div>
+            <div class="text-box"><p>text</p></div>
+
             <div class="lineHorizontal"></div>
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -266,6 +276,9 @@
             <rect width="12" fill="url(#Gradient1" id="rod" x="13" y="9" />
             <rect width="36" height="8" fill="#5a95b4" x="0" id="end2" rx="4" />
           </svg>
+          <div id="roller-text-box">
+            <p>Roller <span>5.1m</span> plus</p>
+          </div>
         </div>
       </div>
     </div>
