--- a/index.html
+++ b/index.html
@@ -15,18 +15,203 @@
         <div class="select-option">
           <label for="pool-length">Pool Length</label>
           <select id="pool-length">
-            <option value="6.0">6.0m</option>
-            <option value="7.0">7.0m</option>
-            <option value="8.0" selected>8.0m</option>
+            <option value="2.0">2.0m </option>
+            <option value="2.2">2.2m </option>
+            <option value="2.4">2.4m </option>
+            <option value="2.5">2.5m </option>
+            <option value="3.0">3.0m </option>
+            <option value="3.6">3.6m </option>
+            <option value="4.0">4.0m </option>
+            <option value="4.2">4.2m </option>
+            <option value="4.3">4.3m </option>
+            <option value="4.5">4.5m </option>
+            <option value="4.6">4.6m </option>
+            <option value="4.7">4.7m </option>
+            <option value="4.8">4.8m </option>
+            <option value="4.9">4.9m </option>
+            <option value="5.0">5.0m </option>
+            <option value="5.1">5.1m </option>
+            <option value="5.2">5.2m </option>
+            <option value="5.3">5.3m </option>
+            <option value="5.4">5.4m </option>
+            <option value="5.5">5.5m </option>
+            <option value="5.6">5.6m </option>
+            <option value="5.7">5.7m </option>
+            <option value="5.8">5.8m </option>
+            <option value="5.9">5.9m </option>
+            <option value="6.0">6.0m </option>
+            <option value="6.1">6.1m </option>
+            <option value="6.2">6.2m </option>
+            <option value="6.3">6.3m </option>
+            <option value="6.4">6.4m </option>
+            <option value="6.5">6.5m </option>
+            <option value="6.6">6.6m </option>
+            <option value="6.7">6.7m </option>
+            <option value="6.8">6.8m </option>
+            <option value="6.9">6.9m </option>
+            <option value="7.0">7.0m </option>
+            <option value="7.1">7.1m </option>
+            <option value="7.2">7.2m </option>
+            <option value="7.3">7.3m </option>
+            <option value="7.4">7.4m </option>
+            <option value="7.5">7.5m </option>
+            <option value="7.6">7.6m </option>
+            <option value="7.7">7.7m </option>
+            <option value="7.8">7.8m </option>
+            <option value="7.9">7.9m </option>
+            <option value="8.0">8.0m </option>
+            <option value="8.1">8.1m </option>
+            <option selected="selected" value="8.2">8.2m </option>
+            <option value="8.3">8.3m </option>
+            <option value="8.4">8.4m </option>
+            <option value="8.5">8.5m </option>
+            <option value="8.6">8.6m </option>
+            <option value="8.7">8.7m </option>
+            <option value="8.8">8.8m </option>
+            <option value="8.9">8.9m </option>
+            <option value="9.0">9.0m </option>
+            <option value="9.1">9.1m </option>
+            <option value="9.2">9.2m </option>
+            <option value="9.3">9.3m </option>
+            <option value="9.4">9.4m </option>
+            <option value="9.5">9.5m </option>
+            <option value="9.6">9.6m </option>
+            <option value="9.7">9.7m </option>
+            <option value="9.8">9.8m </option>
+            <option value="9.9">9.9m </option>
+            <option value="10.0">10.0m </option>
+            <option value="10.1">10.1m </option>
+            <option value="10.2">10.2m </option>
+            <option value="10.3">10.3m </option>
+            <option value="10.4">10.4m </option>
+            <option value="10.5">10.5m </option>
+            <option value="10.6">10.6m </option>
+            <option value="10.7">10.7m </option>
+            <option value="10.8">10.8m </option>
+            <option value="10.9">10.9m </option>
+            <option value="11.0">11.0m </option>
+            <option value="11.1">11.1m </option>
+            <option value="11.2">11.2m </option>
+            <option value="11.3">11.3m </option>
+            <option value="11.4">11.4m </option>
+            <option value="11.5">11.5m </option>
+            <option value="11.6">11.6m </option>
+            <option value="11.7">11.7m </option>
+            <option value="11.8">11.8m </option>
+            <option value="11.9">11.9m </option>
+            <option value="12.0">12.0m </option>
+            <option value="12.1">12.1m </option>
+            <option value="12.2">12.2m </option>
+            <option value="12.3">12.3m </option>
+            <option value="12.4">12.4m </option>
+            <option value="12.5">12.5m </option>
+            <option value="12.6">12.6m </option>
+            <option value="12.7">12.7m </option>
+            <option value="12.8">12.8m </option>
+            <option value="13.0">13.0m </option>
+            <option value="13.1">13.1m </option>
+            <option value="13.2">13.2m </option>
+            <option value="13.3">13.3m </option>
+            <option value="13.4">13.4m </option>
+            <option value="13.5">13.5m </option>
+            <option value="13.6">13.6m </option>
+            <option value="13.8">13.8m </option>
+            <option value="14.0">14.0m </option>
+            <option value="14.1">14.1m </option>
+            <option value="14.2">14.2m </option>
+            <option value="14.3">14.3m </option>
+            <option value="14.4">14.4m </option>
+            <option value="14.5">14.5m </option>
+            <option value="14.7">14.7m </option>
+            <option value="14.8">14.8m </option>
+            <option value="15.0">15.0m </option>
+            <option value="15.5">15.5m </option>
+            <option value="16.0">16.0m </option>
+            <option value="16.2">16.2m </option>
+            <option value="16.3">16.3m </option>
+            <option value="16.4">16.4m </option>
+            <option value="16.5">16.5m </option>
+            <option value="16.7">16.7m </option>
+            <option value="17.0">17.0m </option>
+            <option value="17.5">17.5m </option>
+            <option value="17.8">17.8m </option>
+            <option value="17.9">17.9m </option>
+            <option value="18.0">18.0m </option>
+            <option value="18.5">18.5m </option>
+            <option value="19.0">19.0m </option>
+            <option value="20.0">20.0m </option>
+            <option value="21.0">21.0m </option>
+            <option value="22.0">22.0m </option>
+            <option value="25.0">25.0m </option>
           </select>
         </div>
         <div class="select-option">
           <label for="pool-width">Pool Width</label>
           <select id="pool-width">
-            <option value="3.0">3.0m</option>
-            <option value="4.0">4.0m</option>
-            <option value="5.0">5.0m</option>
-            <option value="6.0" selected>6.0m</option>
+            <option value="1.7">1.7m </option>
+            <option value="1.8">1.8m </option>
+            <option value="2.0">2.0m </option>
+            <option value="2.1">2.1m </option>
+            <option value="2.2">2.2m </option>
+            <option value="2.3">2.3m </option>
+            <option value="2.4">2.4m </option>
+            <option value="2.5">2.5m </option>
+            <option value="2.6">2.6m </option>
+            <option value="2.7">2.7m </option>
+            <option value="2.8">2.8m </option>
+            <option value="2.9">2.9m </option>
+            <option value="3.0">3.0m </option>
+            <option value="3.1">3.1m </option>
+            <option value="3.2">3.2m </option>
+            <option value="3.3">3.3m </option>
+            <option value="3.4">3.4m </option>
+            <option value="3.5">3.5m </option>
+            <option value="3.6">3.6m </option>
+            <option value="3.7">3.7m </option>
+            <option selected="selected" value="3.8">3.8m </option>
+            <option value="3.9">3.9m </option>
+            <option value="4.0">4.0m </option>
+            <option value="4.1">4.1m </option>
+            <option value="4.2">4.2m </option>
+            <option value="4.3">4.3m </option>
+            <option value="4.4">4.4m </option>
+            <option value="4.5">4.5m </option>
+            <option value="4.6">4.6m </option>
+            <option value="4.7">4.7m </option>
+            <option value="4.8">4.8m </option>
+            <option value="4.9">4.9m </option>
+            <option value="5.0">5.0m </option>
+            <option value="5.1">5.1m </option>
+            <option value="5.2">5.2m </option>
+            <option value="5.3">5.3m </option>
+            <option value="5.4">5.4m </option>
+            <option value="5.5">5.5m </option>
+            <option value="5.6">5.6m </option>
+            <option value="5.7">5.7m </option>
+            <option value="5.8">5.8m </option>
+            <option value="5.9">5.9m </option>
+            <option value="6.0">6.0m </option>
+            <option value="6.1">6.1m </option>
+            <option value="6.2">6.2m </option>
+            <option value="6.3">6.3m </option>
+            <option value="6.4">6.4m </option>
+            <option value="6.5">6.5m </option>
+            <option value="6.6">6.6m </option>
+            <option value="6.7">6.7m </option>
+            <option value="6.8">6.8m </option>
+            <option value="6.9">6.9m </option>
+            <option value="7.0">7.0m </option>
+            <option value="7.1">7.1m </option>
+            <option value="7.2">7.2m </option>
+            <option value="7.3">7.3m </option>
+            <option value="7.5">7.5m </option>
+            <option value="7.7">7.7m </option>
+            <option value="7.8">7.8m </option>
+            <option value="8.0">8.0m </option>
+            <option value="8.5">8.5m </option>
+            <option value="9.0">9.0m </option>
+            <option value="9.1">9.1m </option>
+            <option value="9.2">9.2m </option>
           </select>
         </div>
         <div class="select-option">
@@ -62,17 +247,121 @@
         <div class="select-option">
           <label for="step-length">Step Length</label>
           <select id="step-length">
-            <option value="2.0" selected>2.0m</option>
-            <option value="3.0">3.0m</option>
-            <option value="4.0">4.0m</option>
+            <option value="1.0">1.0m </option>
+            <option value="1.1">1.1m </option>
+            <option value="1.2">1.2m </option>
+            <option value="1.3">1.3m </option>
+            <option value="1.4">1.4m </option>
+            <option value="1.5">1.5m </option>
+            <option value="1.6">1.6m </option>
+            <option value="1.7">1.7m </option>
+            <option value="1.8">1.8m </option>
+            <option value="1.9">1.9m </option>
+            <option value="2.0">2.0m </option>
+            <option value="2.1">2.1m </option>
+            <option value="2.2">2.2m </option>
+            <option value="2.3">2.3m </option>
+            <option value="2.4">2.4m </option>
+            <option value="2.5">2.5m </option>
+            <option value="2.6">2.6m </option>
+            <option value="2.7">2.7m </option>
+            <option value="2.8">2.8m </option>
+            <option value="2.9">2.9m </option>
+            <option value="3.0">3.0m </option>
+            <option value="3.1">3.1m </option>
+            <option value="3.2">3.2m </option>
+            <option value="3.3">3.3m </option>
+            <option value="3.4">3.4m </option>
+            <option value="3.5">3.5m </option>
+            <option value="3.6">3.6m </option>
+            <option value="3.7">3.7m </option>
+            <option value="3.8">3.8m </option>
+            <option value="3.9">3.9m </option>
+            <option value="4.0">4.0m </option>
+            <option value="4.1">4.1m </option>
+            <option selected="selected" value="4.2">4.2m </option>
+            <option value="4.3">4.3m </option>
+            <option value="4.4">4.4m </option>
+            <option value="4.5">4.5m </option>
+            <option value="4.6">4.6m </option>
+            <option value="4.7">4.7m </option>
+            <option value="4.8">4.8m </option>
+            <option value="4.9">4.9m </option>
+            <option value="5.0">5.0m </option>
+            <option value="5.1">5.1m </option>
+            <option value="5.2">5.2m </option>
+            <option value="5.3">5.3m </option>
+            <option value="5.4">5.4m </option>
+            <option value="5.5">5.5m </option>
+            <option value="5.6">5.6m </option>
+            <option value="5.6">5.6m </option>
+            <option value="5.7">5.7m </option>
+            <option value="5.8">5.8m </option>
+            <option value="5.9">5.9m </option>
+            <option value="6.0">6.0m </option>
+            <option value="6.1">6.1m </option>
+            <option value="6.2">6.2m </option>
+            <option value="6.3">6.3m </option>
+            <option value="6.4">6.4m </option>
+            <option value="6.5">6.5m </option>
+            <option value="6.6">6.6m </option>
+            <option value="6.7">6.7m </option>
+            <option value="6.8">6.8m </option>
+            <option value="6.9">6.9m </option>
+            <option value="7.0">7.0m </option>
+            <option value="7.1">7.8m </option>
+            <option value="7.2">7.2m </option>
+            <option value="7.3">7.3m </option>
+            <option value="7.4">7.4m </option>
+            <option value="7.5">7.5m </option>
+            <option value="8.0">8.0m </option>
           </select>
         </div>
         <div class="select-option">
           <label for="step-width">Step Width</label>
           <select id="step-width">
-            <option value="1.0" selected>1.0m</option>
-            <option value="2.0">2.0m</option>
-            <option value="3.0">3.0m</option>
+            <option value="0.4">0.4m </option>
+            <option value="0.5">0.5m </option>
+            <option value="0.6">0.6m </option>
+            <option value="0.7">0.7m </option>
+            <option value="0.8">0.8m </option>
+            <option value="0.9">0.9m </option>
+            <option selected="selected" value="1.0">1.0m </option>
+            <option value="1.1">1.1m </option>
+            <option value="1.2">1.2m </option>
+            <option value="1.3">1.3m </option>
+            <option value="1.4">1.4m </option>
+            <option value="1.5">1.5m </option>
+            <option value="1.6">1.6m </option>
+            <option value="1.7">1.7m </option>
+            <option value="1.8">1.8m </option>
+            <option value="1.9">1.9m </option>
+            <option value="2.0">2.0m </option>
+            <option value="2.1">2.1m </option>
+            <option value="2.2">2.2m </option>
+            <option value="2.3">2.3m </option>
+            <option value="2.4">2.4m </option>
+            <option value="2.5">2.5m </option>
+            <option value="2.6">2.6m </option>
+            <option value="2.7">2.7m </option>
+            <option value="2.8">2.8m </option>
+            <option value="2.9">2.9m </option>
+            <option value="3.0">3.0m </option>
+            <option value="3.1">3.1m </option>
+            <option value="3.2">3.2m </option>
+            <option value="3.3">3.3m </option>
+            <option value="3.4">3.4m </option>
+            <option value="3.6">3.6m </option>
+            <option value="3.8">3.8m </option>
+            <option value="3.9">3.9m </option>
+            <option value="4.0">4.0m </option>
+            <option value="4.3">4.3m </option>
+            <option value="4.5">4.5m </option>
+            <option value="4.6">4.6m </option>
+            <option value="4.9">4.9m </option>
+            <option value="5.3">5.3m </option>
+            <option value="5.6">5.6m </option>
+            <option value="7.3">7.3m </option>
           </select>
         </div>
         <div class="select-option">
@@ -102,6 +391,25 @@
               <div class="lineVertical"></div>
               <div class="text-box"><p>text</p></div>
             </div>
+            <div id="side-dimension-alt">
+              <div class="text-box"><p>text</p></div>
+            </div>
+            <div id="side-dimension-horizontal">
+              <div class="text-box"><p>text</p></div>
+              <div class="lineHorizontal"></div>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 53.5 45"
+                height="9.75"
+                class="arrow4"
+              >
+                <g id="Layer_2" data-name="Layer 2">
+                  <g id="Layer_1-2" data-name="Layer 1">
+                    <polygon points="0 45.12 53.52 22.8 0 0 0 45.12" />
+                  </g>
+                </g>
+              </svg>
+            </div>
             <div id="border-container">
               <div id="extra-container">
                 <div id="side-step"></div>
@@ -121,7 +429,7 @@
                 <filter id="goo">
                   <feGaussianBlur
                     in="SourceGraphic"
-                    stdDeviation="1"
+                    stdDeviation="1.5"
                     result="blur"
                   />
                   <feColorMatrix
